Sequence Editor Cuts #47862

Closed
opened 2016-03-20 22:01:27 +01:00 by Trey · 6 comments

System Information
Windows 7, i7 processor, GTX 970 Graphics Driver, 24GB G-Skill Ripjaw RAM, ASUS Z97-A Motherboard, CX600M Power Supply.

Blender Version
Broken: (2.69.7 4b206af) (Version just before new update [3/19/16])
Worked: (3/18/16)

Error
(Edit: This only happens when opening files saved before 2.77 update)
Hard cuts in the sequence editor delete the right strip and leave the left; even if it's corrected in the user preferences.

Exact steps for others to reproduce the error

  • Select any video strip saved prior to update 2.77 (3/19/16).
  • Hit "Shift - K"
    (Optional)
  • Panic that you've lost 48 hours of work.
  • Start to file bug fix
  • Realize this only happens with old files
  • Feel relieved yet bad for having panicked in the first place
**System Information** Windows 7, i7 processor, GTX 970 Graphics Driver, 24GB G-Skill Ripjaw RAM, ASUS Z97-A Motherboard, CX600M Power Supply. **Blender Version** Broken: (2.69.7 4b206af) (Version just before new update [3/19/16]) Worked: (3/18/16) **Error** (Edit: This only happens when opening files saved before 2.77 update) Hard cuts in the sequence editor delete the right strip and leave the left; even if it's corrected in the user preferences. **Exact steps for others to reproduce the error** - Select any video strip saved prior to update 2.77 (3/19/16). - Hit "Shift - K" *(Optional)* - Panic that you've lost 48 hours of work. - Start to file bug fix - Realize this only happens with old files - Feel relieved yet bad for having panicked in the first place
Author

Changed status to: 'Open'

Changed status to: 'Open'
Trey self-assigned this 2016-03-20 22:01:27 +01:00
Author

Added subscriber: @EgoFriendly

Added subscriber: @EgoFriendly

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Regression caused by 53ef03d20f, however the hard-cut code is very fragile here (any change with length after calling reload will cause issues).

Will look into a way this can work that doesn't fail when reload changes seq length.

Regression caused by 53ef03d20f, however the hard-cut code is very fragile here *(any change with length after calling reload will cause issues)*. Will look into a way this can work that doesn't fail when reload changes seq length.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 112300a982

This issue was referenced by 112300a982380c0b87cc1836d83143c902afad14
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47862
No description provided.